--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
       </nav>
     </header>
 
-    <main class="apresentacao">
+    <main class="apresentacao"> 
       <section class="apresentacao__conteudo">
+
+        <h1 class="apresentacao__conteudo__nome">Mabson Freire</h1>
+
         <h1 class="apresentacao__conteudo__titulo">
           Eleve seu negócio digital a outro nível
           <strong class="destaque-do-titulo"
