adição de foto própria e mudanças na margem

--- a/index.html
+++ b/index.html
@@ -15,12 +15,8 @@
         <a class="menu-superior__link" href="./curriculo.html">Currículo</a>
       </nav>
     </header>
-
     <main class="apresentacao"> 
       <section class="apresentacao__conteudo">
-
-        <h1 class="apresentacao__conteudo__nome">Mabson Freire</h1>
-
         <h1 class="apresentacao__conteudo__titulo">
           Eleve seu negócio digital a outro nível
           <strong class="destaque-do-titulo"
@@ -57,15 +53,18 @@
           >
         </div>
       </section>
-      <img
-        class="apresentacao__imagem"
-        src="./assets/img/pessoa com notebook.png"
-        alt="imagem de Joana com notebook"
-      />
+      <div class="apresentacao__visualizacao">
+
+        <img
+          class="apresentacao__visualizacao__imagem"
+          src="./assets/img/Imagem_do_WhatsApp_de_2024-07-16_à_s__15.28.08_4a930320-removebg-preview.png"
+          alt="imagem de Joana com notebook"
+        />
+      </div>
     </main>
 
     <footer class="rodape">
-      <p class="copy">Desenvolvido por Mabson Freire</p>
+      <p class="copy"> Desenvolvido por Mabson Freire</p>
     </footer>
   </body>
 </html>
