criado nova aba projetos

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <header>
       <nav class="menu-superior">
         <a class="menu-superior__link" href="./index.html">Home</a>
-        <a class="menu-superior__link" href="./curriculo.html">Currículo</a>
+        <a class="menu-superior__link" href="./projetos.html">Projetos</a>
       </nav>
     </header>
 
@@ -38,7 +38,7 @@
       </section>
       <img
         class="apresentacao__imagem"
-        src="./assets/img/pessoa com notebook.png"
+        src="./assets/img/Imagem_do_WhatsApp_de_2024-07-16_à_s__15.28.08_4a930320-removebg-preview.png"
         alt="Pessoa com notebook"
       />
     </main>
