--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <nav class="menu-superior">
         <a class="menu-superior__link" href="./index.html">Home</a>
         <a class="menu-superior__link" href="./about.html"> Sobre Mim</a>
-        <a class="menu-superior__link" href="./curriculo.html">Currículo</a>
+        <a class="menu-superior__link" href="./projetos.html">Projetos</a>
       </nav>
     </header>
     <main class="apresentacao"> 
