finalizando parte escrita do portflolio e colocando links

--- a/about.html
+++ b/about.html
@@ -19,28 +19,25 @@
       <section class="apresentacao__conteudo">
         <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
         <p class="apresentacao__conteudo__texto">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Et magni
-          neque commodi placeat exercitationem fugit facere odio hic laborum
-          eligendi, officia corrupti amet odit aspernatur. Nam deserunt
-          consequatur suscipit! Inventore!
+          Sou Mabson Freire, um desenvolvedor apaixonado por usar a tecnologia para resolver problemas e criar soluções inovadoras. Desde criança, me encantava por desvendar os mistérios dos celulares da minha tia e da minha avó, sempre pronto para solucionar qualquer problema. Essa paixão me impulsionou a me dedicar ao desenvolvimento, buscando constantemente aprimorar minhas habilidades para construir interfaces intuitivas e eficientes. 
         </p>
         <p class="apresentacao__conteudo__texto">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-          Reprehenderit similique libero dolor laboriosam, enim molestias ea id
-          quo magnam exercitationem dolores quas eum? Eaque magnam accusantium
-          deleniti distinctio quos? Voluptates! Lorem, ipsum dolor sit amet
-          consectetur adipisicing elit. Ipsum pariatur tempora, repellendus cum
-          nihil consequuntur quas. Doloribus corporis architecto exercitationem
-          ut neque aliquam provident fugiat at tempore, optio odio voluptate.
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit
-          laboriosam laudantium libero minima tenetur quod?
+          Minha expertise se concentra em três áreas: **design responsivo,  criação de back-end e integração entre front e back-end.**  Gosto de me desafiar a criar sistemas que funcionem perfeitamente em qualquer dispositivo e que possibilitem uma experiência de usuário impecável.
         </p>
+        <p class="apresentacao__conteudo__texto">Um projeto que me orgulha muito foi o desenvolvimento de um sistema de criptografia e descriptografia de mensagens.  Essa experiência me permitiu explorar conceitos de segurança e desenvolver soluções robustas, um dos meus grandes objetivos como desenvolvedor.
+
+        Meu sonho é liderar uma equipe de talentos que, assim como eu, se dedica a solucionar problemas e criar soluções inovadoras para o mundo.  Acredito que a tecnologia tem um papel fundamental para transformar a sociedade e construir um futuro melhor. </p>
+
+        <strong>Entre em contato para discutir como posso ajudar você a dar vida às suas ideias!</strong>
       </section>
-      <img
-        class="apresentacao__imagem"
-        src="./assets/img/Imagem_do_WhatsApp_de_2024-07-16_à_s__15.28.08_4a930320-removebg-preview.png"
-        alt="Pessoa com notebook"
-      />
+      <div class="apresentacao__visualizacao">
+
+        <img
+          class="apresentacao__visualizacao__imagem"
+          src="./assets/img/Imagem_do_WhatsApp_de_2024-07-16_à_s__15.28.08_4a930320-removebg-preview.png"
+          alt="Imagem de Mabson Freire"
+        />
+      </div>
     </main>
 
     <footer class="rodape">
