implementação de mudança de tema claro/escuro

--- a/index.html
+++ b/index.html
@@ -5,47 +5,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="./assets/styles/style.css" />
+    <script src="./assets/app/app.js" defer></script>
+
     <title>Portfolio</title>
   </head>
-  <body>
+  <body data-theme="dark">
     <header>
       <nav class="menu-superior">
         <a class="menu-superior__link" href="./index.html">Home</a>
         <a class="menu-superior__link" href="./about.html"> Sobre Mim</a>
         <a class="menu-superior__link" href="./projetos.html">Projetos</a>
       </nav>
+      <button class="menu-superior__mudar-tema" id="btn-mudar-tema">
+        Mudar Tema
+      </button>
     </header>
-    <main class="apresentacao"> 
+    <main class="apresentacao">
       <section class="apresentacao__conteudo">
         <h1 class="apresentacao__conteudo__titulo">
-          <strong class="destaque-do-titulo"
-            >Mabson Freire, </strong
-          >
-          Full Stack de Qualidade para 
-          <strong class="destaque-do-titulo"
-            >Projetos de Sucesso!</strong
-          >
+          <strong class="destaque-do-titulo">Mabson Freire, </strong>
+          Full Stack de Qualidade para
+          <strong class="destaque-do-titulo">Projetos de Sucesso!</strong>
         </h1>
         <p class="apresentacao__conteudo__texto">
-          <strong class="destaque-do-texto">Construindo experiências digitais excepcionais com JavaScript, HTML e CSS.</strong> Sou Mabson Freire, desenvolvedor Full-Stack apaixonado por criar interfaces intuitivas e eficientes. Meu foco está em transformar ideias em realidade, ajudando pequenos negócios e designs a levarem seus projetos a outro nível.
+          <strong class="destaque-do-texto"
+            >Construindo experiências digitais excepcionais com JavaScript, HTML
+            e CSS.</strong
+          >
+          Sou Mabson Freire, desenvolvedor Full-Stack apaixonado por criar
+          interfaces intuitivas e eficientes. Meu foco está em transformar
+          ideias em realidade, ajudando pequenos negócios e designs a levarem
+          seus projetos a outro nível.
         </p>
         <div class="apresentacao__links">
           <p class="apresentacao__links__titulo">Acesse minhas redes:</p>
-          <a class="apresentacao__links__botao botao-github" href="https://github.com/Mabson-freire"
+          <a
+            class="apresentacao__links__botao botao-github"
+            href="https://github.com/Mabson-freire"
             ><img
               class="apresentacao__links__botao__img icone-github"
               src="./assets/icons/github.svg"
               alt="logo github"
             />GitHub</a
           >
-          <a class="apresentacao__links__botao botao-linkedin" href="https://www.linkedin.com/in/mabson-freire-dev?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"
+          <a
+            class="apresentacao__links__botao botao-linkedin"
+            href="https://www.linkedin.com/in/mabson-freire-dev?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"
             ><img
               class="apresentacao__links__botao__img icone-linkedin"
               src="./assets/icons/linkedin.svg"
               alt="logo linkedin"
             />Linkedin</a
           >
-          <a class="apresentacao__links__botao" href="https://api.whatsapp.com/send?phone=5585999457543&text=*Ol%C3%A1%20Mabson!*%20%F0%9F%91%8B%0AVi%20seu%20portf%C3%B3lio%20e%20fiquei%20impressionado%20com%20seus%20trabalhos.%0AGostaria%20de%20saber%20mais%20sobre%20seus%20servi%C3%A7os%20e%20como%20voc%C3%AA%20pode%20ajudar%0ATemos%20um%20tempinho%20para%20conversar?
+          <a
+            class="apresentacao__links__botao"
+            href="https://api.whatsapp.com/send?phone=5585999457543&text=*Ol%C3%A1%20Mabson!*%20%F0%9F%91%8B%0AVi%20seu%20portf%C3%B3lio%20e%20fiquei%20impressionado%20com%20seus%20trabalhos.%0AGostaria%20de%20saber%20mais%20sobre%20seus%20servi%C3%A7os%20e%20como%20voc%C3%AA%20pode%20ajudar%0ATemos%20um%20tempinho%20para%20conversar?
           "
             ><img
               class="apresentacao__links__botao__img icone-whatsapp"
@@ -56,7 +70,6 @@
         </div>
       </section>
       <div class="apresentacao__visualizacao">
-
         <img
           class="apresentacao__visualizacao__imagem"
           src="./assets/img/Imagem_do_WhatsApp_de_2024-07-16_à_s__15.28.08_4a930320-removebg-preview.png"
@@ -66,7 +79,7 @@
     </main>
 
     <footer class="rodape">
-      <p class="copy"> Desenvolvido por Mabson Freire</p>
+      <p class="copy">Desenvolvido por Mabson Freire</p>
     </footer>
   </body>
 </html>
