--- a/projetos.html
+++ b/projetos.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="./assets/styles/style.css">
+    <link rel="stylesheet" href="./assets/styles/style.css" />
+    <script src="./assets/app/app.js" defer></script>
+
     <title>Projetos</title>
-</head>
-<body>
+  </head>
+  <body data-theme="dark">
     <header>
-        <nav class="menu-superior">
-            <a class="menu-superior__link" href="./index.html">Home</a>
-            <a class="menu-superior__link" href="./about.html"> Sobre Mim</a>
-          </nav>
+      <nav class="menu-superior">
+        <a class="menu-superior__link" href="./index.html">Home</a>
+        <a class="menu-superior__link" href="./about.html"> Sobre Mim</a>
+      </nav>
+      <button class="menu-superior__mudar-tema" id="btn-mudar-tema">
+        Mudar Tema
+      </button>
     </header>
 
     <main></main>
 
     <footer class="rodape">
-      <p class="copy"> Desenvolvido por Mabson Freire</p>
+      <p class="copy">Desenvolvido por Mabson Freire</p>
     </footer>
-</body>
+  </body>
 </html>
