--- a/about.html
+++ b/about.html
@@ -4,34 +4,56 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/styles/style.css" />
+    <script src="./assets/app/app.js" defer></script>
 
     <title>Sobre Mim</title>
   </head>
-  <body>
+  <body data-theme="dark">
     <header>
       <nav class="menu-superior">
         <a class="menu-superior__link" href="./index.html">Home</a>
         <a class="menu-superior__link" href="./projetos.html">Projetos</a>
       </nav>
+      <button class="menu-superior__mudar-tema" id="btn-mudar-tema">
+        Mudar Tema
+      </button>
     </header>
 
     <main class="apresentacao">
       <section class="apresentacao__conteudo">
         <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
         <p class="apresentacao__conteudo__texto">
-          Sou Mabson Freire, um desenvolvedor apaixonado por usar a tecnologia para resolver problemas e criar soluções inovadoras. Desde criança, me encantava por desvendar os mistérios dos celulares da minha tia e da minha avó, sempre pronto para solucionar qualquer problema. Essa paixão me impulsionou a me dedicar ao desenvolvimento, buscando constantemente aprimorar minhas habilidades para construir interfaces intuitivas e eficientes. 
+          Sou Mabson Freire, um desenvolvedor apaixonado por usar a tecnologia
+          para resolver problemas e criar soluções inovadoras. Desde criança, me
+          encantava por desvendar os mistérios dos celulares da minha tia e da
+          minha avó, sempre pronto para solucionar qualquer problema. Essa
+          paixão me impulsionou a me dedicar ao desenvolvimento, buscando
+          constantemente aprimorar minhas habilidades para construir interfaces
+          intuitivas e eficientes.
         </p>
         <p class="apresentacao__conteudo__texto">
-          Minha expertise se concentra em três áreas: **design responsivo,  criação de back-end e integração entre front e back-end.**  Gosto de me desafiar a criar sistemas que funcionem perfeitamente em qualquer dispositivo e que possibilitem uma experiência de usuário impecável.
+          Minha expertise se concentra em três áreas: **design responsivo,
+          criação de back-end e integração entre front e back-end.** Gosto de me
+          desafiar a criar sistemas que funcionem perfeitamente em qualquer
+          dispositivo e que possibilitem uma experiência de usuário impecável.
         </p>
-        <p class="apresentacao__conteudo__texto">Um projeto que me orgulha muito foi o desenvolvimento de um sistema de criptografia e descriptografia de mensagens.  Essa experiência me permitiu explorar conceitos de segurança e desenvolver soluções robustas, um dos meus grandes objetivos como desenvolvedor.
+        <p class="apresentacao__conteudo__texto">
+          Um projeto que me orgulha muito foi o desenvolvimento de um sistema de
+          criptografia e descriptografia de mensagens. Essa experiência me
+          permitiu explorar conceitos de segurança e desenvolver soluções
+          robustas, um dos meus grandes objetivos como desenvolvedor. Meu sonho
+          é liderar uma equipe de talentos que, assim como eu, se dedica a
+          solucionar problemas e criar soluções inovadoras para o mundo.
+          Acredito que a tecnologia tem um papel fundamental para transformar a
+          sociedade e construir um futuro melhor.
+        </p>
 
-        Meu sonho é liderar uma equipe de talentos que, assim como eu, se dedica a solucionar problemas e criar soluções inovadoras para o mundo.  Acredito que a tecnologia tem um papel fundamental para transformar a sociedade e construir um futuro melhor. </p>
-
-        <strong>Entre em contato para discutir como posso ajudar você a dar vida às suas ideias!</strong>
+        <strong
+          >Entre em contato para discutir como posso ajudar você a dar vida às
+          suas ideias!</strong
+        >
       </section>
       <div class="apresentacao__visualizacao">
-
         <img
           class="apresentacao__visualizacao__imagem"
           src="./assets/img/Imagem_do_WhatsApp_de_2024-07-16_à_s__15.28.08_4a930320-removebg-preview.png"
